# sdk-ios

./: .clang-format  .gitignore  .gitlab-ci.yml  README.md  develop.py  mypy.ini  pyproject.toml  run-ci.py  setup.py  tbump.toml
.github/: issue_template.md
Tanker/: .gitignore  .travis.yml  LICENSE  README.md  Tanker.in.podspec  Tanker.podspec  TankerDev.podspec  export_symbols.list
Tanker/Example/: Podfile
Tanker/Headers/: .gitignore  TKRAsyncStreamReader+Private.h  TKRAttachResult+Private.h  TKRAttachResult.h  TKRAuthenticationMethods.h  TKRCompletionHandlers.h  TKRDecryptionOptions.h  TKREmailVerification+Private.h  TKREncryptionOptions.h  TKREncryptionSession+Private.h  TKREncryptionSession.h  TKRError.h  TKREvents.h  TKRInputStreamDataSource+Private.h  TKRLogEntry.h  TKRNetwork+Private.h  TKRNetwork.h  TKROIDCAuthorizationCodeVerification+Private.h  TKRPadding.h  TKRPhoneNumberVerification+Private.h  TKRPreverifiedOIDCVerification+Private.h  TKRShareOptions.h  TKRSharingOptions.h  TKRSignInOptions.h  TKRSignInResult.h  TKRStatus.h  TKRStreamBase.h  TKRStreamsFromNative+Private.h  TKRSwift+Private.h  TKRTanker+Private.h  TKRTanker.h  TKRTankerOptions+Private.h  TKRTankerOptions.h  TKRUnlockKey+Private.h  TKRUnlockKey.h  TKRUnlockOptions.h  TKRUtils+Private.h  TKRVerification+Private.h  TKRVerification.h  TKRVerificationKey+Private.h  (+6 more)
Tanker/Sources/: TKRAsyncStreamReader.m  TKRAttachResult.m  TKRAuthenticationMethods.m  TKRChunkEncryptor+Private.m  TKRChunkEncryptor.m  TKRDecryptionOptions.m  TKREmailVerification+Private.m  TKREncryptionOptions.m  TKREncryptionOptions.swift  (+34 more)
(+65 files in other folders)
