[tool.poetry]
name = "tanker-ios-sdk"
version = "0.1.0"
description = "iOS client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = "*"

[[tool.poetry.source]]
name = "tanker.local"
url = "http://tanker.local:8181"


[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
