[tool.poetry]
name = "tanker-ios-sdk"
version = "0.1.0"
description = "iOS client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = "2020.12.dev3122"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.3"
black = "^19.10b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
