[tool.poetry]
name = "tanker-ios-sdk"
version = "0.1.0"
description = "iOS client for Tanker"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2022.04.4183", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"


[tool.poetry.dev-dependencies]
mypy = "^0.942"
flake8 = "^4.0.1"
black = "^22.3.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
